--- a/.github/workflows/third_workflow.yaml
+++ b/.github/workflows/third_workflow.yaml
@@ -7,6 +7,12 @@ jobs:
         steps:
           - name: Display files
             run: ls -a
-          - uses: actions/checkout@v4
+          #- uses: actions/checkout@v4
+          - name: Copy files
+            run: 
+              git init
+              git remote add origin "https://$GITHUB_ACTOR:${{secrets.GITHUB_TOKEN}}:@github.com/$GITHUB_REPOSITORY.git"
+              git fetch origin
+              git sheckout main
           - name: Display files
-            run: ls -a  
+            run: ls -a
