--- a/.github/workflows/third_workflow.yaml
+++ b/.github/workflows/third_workflow.yaml
@@ -15,4 +15,4 @@ jobs:
               #git fetch origin
              # git sheckout main
           - name: Display files
-            run: ls -a
+            run: lsds -a
